--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
      <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
     <script>
-        //component App 
+        //component name - App 
         const App = () => {
             return React.createElement(
                 "div",
